# book-record

./: .gitignore  LICENSE  README.md  openapi.yaml
.github/workflows/: ci_backend.yaml  ci_frontend.yaml  ci_idp.yaml
backend/: .dockerignore  Cargo.toml  Dockerfile  Makefile  Rocket.toml  compose.yaml  diesel.toml
backend/.mockserver/: init.json
backend/migrations/: 20211121070656_books.down.sql  20211121070656_books.up.sql  20211128084646_user_table.up.sql
backend/migrations/2021-10-03-154059_create_books/: up.sql
backend/src/: controller.rs  domain.rs  main.rs  models.rs  schema.rs  settings.rs
backend/src/controller/: book.rs  models.rs  user.rs
backend/src/domain/: entity.rs
backend/src/domain/entity/: book.rs  user.rs
backend/src/domain/repo_if/: book.rs  user.rs
backend/src/domain/repository_interface/: book.rs  user.rs
backend/src/domain/service/: book.rs  user.rs
backend/src/infra/: repo.rs
backend/src/infra/repo/: book.rs  schema.rs  session.rs  user.rs
backend/src/infrastructure/: repository.rs
backend/src/infrastructure/repository/: book.rs  connection.rs  schema.rs  user.rs
book-record-backend/: Cargo.toml  Rocket.toml
book-record-backend/src/: main.rs
frontend/: Cargo.toml  index.html
frontend/src/: main.rs  routes.rs  settings.rs
frontend/src/atom/: common.rs
frontend/src/molecule/: book.rs
frontend/src/organism/: book.rs  common.rs  mod.rs
frontend/src/page/: book.rs  error.rs  home.rs  mod.rs
frontend/static/css/: style.css
idp_mock/: .dockerignore  Cargo.toml  Dockerfile  Makefile
idp_mock/src/: main.rs
time-percentage-backend/: Cargo.toml
time-percentage-backend/src/: main.rs
