[package]
name = "book-record"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "^0.3", features = ["headers"] }
tokio = { version = "^1.12.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "^0.4.10", features = [] }
tower-http = { version = "^0.1.1", features = ["fs"] }
hyper = "^0.14.14"
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0.59"
headers = "^0.3"

tracing-subscriber = "^0.3.1"
tracing = "^0.1.29"

chrono = { version = "^0.4", features = ["serde"] }
sqlx = { version = "^0.5", features = ["runtime-tokio-rustls", "postgres"] }

openidconnect = "^2.1"
uuid = { version = "^0.8", features = ["v4"] }
