[package]
name = "book-record"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"

rocket_okapi = "0.7.0-alpha-1"
schemars = "0.7"
okapi = { version = "0.6.0-alpha-1", features = ["derive_json_schema"] }

