[package]
name = "book-record-front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
web-sys = { version = "^0.3", features = ["HtmlCanvasElement"] }
gloo-utils = "^0.1"
wasm-bindgen = "^0.2"

reqwasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
