[package]
name = "idp_mock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openidconnect = "^2.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
uuid = { version = "^0.8", features = ["v4"] }

axum = { version = "^0.3", features = ["headers"] }
tokio = { version = "^1.12.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "^0.1.1", features = ["trace"] }
headers = "^0.3"

tracing-subscriber = "^0.3"
tracing = "^0.1"

dotenv = "^0.15"
